<resources>
    <string name="app_name">酷我天气</string>
    <string name="my_app_name">测试APP</string>
    <!--Login-->
    <string name="login_hint_username">请输入用户名</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_auto_login">自动登录</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <!--Park-->
    <string name="park_exit_login">退出登录</string>
    <!--公共-->
    <string name="network_not_connected">网络未连接</string>
    <string name="unable_to_connect_server_try_again_later">无法连接到服务器，请稍后再试。</string>
</resources>